--- a/app/views/home/fees.html.erb
+++ b/app/views/home/fees.html.erb
@@ -468,9 +468,9 @@ td.text-right {
                         'disclaimerMsg': "INDUSTRY PARTICIPANT",
                         'merchantId': 'L522',
                         'currency': 'INR',
-                        'consumerId': '1',
-                        'consumerMobileNo': '9591355172',
-                        'consumerEmailId': 'abhijeet428001@gmail.com',
+                        'consumerId': '<%= current_user.id %>',
+                        'consumerMobileNo': '<%= current_user.mobile_number %>',
+                        'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
                             'itemId': 'PRME',
@@ -524,9 +524,9 @@ td.text-right {
                         'disclaimerMsg': "Members of UN Global Compact Network",
                         'merchantId': 'L522',
                         'currency': 'INR',
-                        'consumerId': '1',
-                        'consumerMobileNo': '9591355172',
-                        'consumerEmailId': 'abhijeet428001@gmail.com',
+                        'consumerId': '<%= current_user.id %>',
+                        'consumerMobileNo': '<%= current_user.mobile_number %>',
+                        'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
                             'itemId': 'PRME',
@@ -580,9 +580,9 @@ td.text-right {
                         'disclaimerMsg': "Academics",
                         'merchantId': 'L522',
                         'currency': 'INR',
-                        'consumerId': '1',
-                        'consumerMobileNo': '9591355172',
-                        'consumerEmailId': 'abhijeet428001@gmail.com',
+                        'consumerId': '<%= current_user.id %>',
+                        'consumerMobileNo': '<%= current_user.mobile_number %>',
+                        'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
                             'itemId': 'PRME',
@@ -636,9 +636,9 @@ td.text-right {
                         'disclaimerMsg': "Students",
                         'merchantId': 'L522',
                         'currency': 'INR',
-                        'consumerId': '1',
-                        'consumerMobileNo': '9591355172',
-                        'consumerEmailId': 'abhijeet428001@gmail.com',
+                        'consumerId': '<%= current_user.id %>',
+                        'consumerMobileNo': '<%= current_user.mobile_number %>',
+                        'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
                             'itemId': 'PRME',
@@ -692,9 +692,9 @@ td.text-right {
                         'disclaimerMsg': "Social Sector",
                         'merchantId': 'L522',
                         'currency': 'INR',
-                        'consumerId': '1',
-                        'consumerMobileNo': '9591355172',
-                        'consumerEmailId': 'abhijeet428001@gmail.com',
+                        'consumerId': '<%= current_user.id %>',
+                        'consumerMobileNo': '<%= current_user.mobile_number %>',
+                        'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
                             'itemId': 'PRME',
