--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -180,6 +180,80 @@ ul.breadcrumb li a:hover {
       </div>
   </div>
 </div>
+
+
+<div id="3" style="height: 800px; margin-bottom: 50px; margin-top: 200px;">
+  <ul class="breadcrumb">
+    <li><a href="/">Home</a></li>
+    <li><a href="/tracks">List of track</a></li>
+    <li>DESIGN THINKING IN MANAGEMENT</li>
+  </ul>
+        <div class="column-12 w-col w-col-12">
+        <div class="card-new">
+          <div class="row-5 w-row">
+            <div class="w-col w-col-12" style="padding: 10px;">
+              <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;"><u>DESIGN THINKING IN MANAGEMENT</u><br></h4>
+              <div class="w-col w-col-6">
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Chairs : </p>
+                </h4>
+                <div class="row-5">
+                  <div class="column- w-col w-col-6">
+                    <div class="card-detail" style="width: 75% !important;">
+                      <a href="/trackchairs##">
+                        <img src="../" class="image-hover" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%">
+                      </a>
+                      <div class="container">
+                        <a href="/trackchairs#1">
+                        <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Arvind Shatdal</h4>
+                        </a>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Assistant Professor and Head, Department of Organization Behavior and Human Resource Management/Founding Coordinator,</h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">MBA Program/School of Management and Entrepreneurship (SME)</h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Shiv Nadar University</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="column- w-col w-col-6">
+                    <div class="card-detail" style="width: 75% !important; height: 506px;">
+                      <a href="/trackchairs11">
+                      <img src="../DrSandipAnand.jpeg" class="image-hover" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%">
+                    </a>
+                      <div class="container">
+                        <a href="/trackchairs#8">
+                        <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Sandip Anand</h4>
+                        </a>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor, Xavier Institute of Management</h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Founding Associate Dean, Doctoral Programs, Xavier University Bhubaneswar</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="w-col w-col-6">
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
+                </h4>
+                <p style="text-align: justify;">
+                Content coming soon.
+              </p>
+              </div>
+              <div class="column-1 w-col w-col-1"></div></div>
+              <div class="column-4 w-col w-col-4"></div>
+             <div class="column-4 w-col w-col-4" style="border-right:none !important; text-align: center">
+               <%= link_to new_abstract_path, :class => "button" do %>
+                <span>Upload your abstract</span>
+                <%end%>
+             </div>
+              
+             
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
 <div id="7" style="height: 800px; margin-bottom: 50px; margin-top: 200px;">
   <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
