--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   <script src="../webflow.js" type="text/javascript"></script>
   <script type="text/javascript" src="../timeline.min.js"></script>
   <script src="https://www.paynimo.com/paynimocheckout/client/lib/jquery.min.js" type="text/javascript"></script>
-
+<script src='https://www.google.com/recaptcha/api.js'></script>
 
   <meta property="og:url"           content="http://prmeasia.spjimr.org/" />
   <meta property="og:type"          content="website" />
