--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -84,7 +84,11 @@
             </a>
 
           </div>
-          <div class="slide-5 w-slide">
+           <!-- <div class="slide-3 w-slide"> -->
+            
+            
+          <!-- </div> -->
+          <div class="slide-4 w-slide">
             <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 58%;  cursor: pointer; opacity: 0">  
             </a>
             <a href="http://www.unprme.org/" target="_blank" class="button" style="position: absolute; top: 75%; left: 45%;  cursor: pointer; opacity: 0">  
@@ -103,6 +107,27 @@
               hbs
             </a>
           </div>
+          <div class="slide-5 w-slide">
+            <a href="/fees" class="button" style="position: absolute; top: 59%; left: 35%;  cursor: pointer; opacity: 0">  
+            </a>
+            <a href="http://www.unprme.org/" target="_blank" class="button" style="position: absolute; top: 75%; left: 45%;  cursor: pointer; opacity: 0">  
+              some content with the text of <br>
+              again <br>
+              jasdh
+            </a>
+            <a href="https://www.unglobalcompact.org/" target="_blank" class="button" style="position: absolute; top: 75%; left: 65%;  cursor: pointer; opacity: 0"> 
+             some content with the  e<br>
+              again <br>
+              kajshg
+            </a>
+            <a href="http://spjimr.org/" target="_blank" class="button" style="position: absolute; top: 75%; left: 82%;  cursor: pointer; opacity: 0">  
+              some hs with the a <br>
+              again <br>
+              hbs
+            </a>
+          </div>
+          
+         
           <!-- <div class="slide-6 w-slide"></div> -->
 
         </div>
