--- a/app/views/home/prme.html.erb
+++ b/app/views/home/prme.html.erb
@@ -17,7 +17,7 @@
 <%end%> 
 <div>
       <div class="heading-tittle color-black w-container" style="margin-top: 30px; margin-bottom: 30px;">
-        <h2><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">PRME</p></h2>
+        <!-- <h2><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">PRME</p></h2> -->
     </div>
 
     <div class="row-2 w-row">
