--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -118,14 +118,14 @@ ul.breadcrumb li a:hover {
             </h4>
             <div class="row-5">
               <div class="column- w-col w-col-6">
-                <div class="card-detail" style="width: 75% !important; height: 428px;">
+                <div class="card-detail" style="width: 75% !important; height: 385px;">
                   <a href="/trackchairs#3">
                   <img src="../track/DrDivyaSinghal.jpg" class="image-hover" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%"></a>
                   <div class="container">
                    <a href="/trackchairs#3">
                     <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Divya Singhal</h4>
                     </a>
-                    <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(divyasinghal@gim.ac.in)</p>
+                    <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(divyasinghal@gim.ac.in)</p> -->
                     <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor (General Management)</h5>
                     <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Goa Institute of Management</h5>
                   </div>
@@ -139,7 +139,7 @@ ul.breadcrumb li a:hover {
                   <div class="container">
                     <a href="trackchairs#9">
                     <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Santosh Kumar</h4></a>
-                    <h5 class="heading-10" style="font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(Santosh.kumar @aurouniversity.edu.in)</h5>
+                    <!-- <h5 class="heading-10" style="font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(Santosh.kumar @aurouniversity.edu.in)</h5> -->
                     <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor and Head, Public Policy, School of Liberal Arts and Human Sciences</h5>
                     <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Auro University</h5>
                   </div>
@@ -200,7 +200,7 @@ ul.breadcrumb li a:hover {
                   <div class="column- w-col w-col-6">
                     <div class="card-detail" style="width: 75% !important;">
                       <a href="/trackchairs##">
-                        <img src="../" class="image-hover" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%">
+                        <img src="../DrArvindShatdal.jpg" class="image-hover" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%">
                       </a>
                       <div class="container">
                         <a href="/trackchairs#1">
@@ -270,7 +270,7 @@ ul.breadcrumb li a:hover {
                 </h4>
                 <div class="row-5">
                   <div class="column- w-col w-col-6">
-                    <div class="card-detail" style="width: 75% !important; height: 406px;">
+                    <div class="card-detail" style="width: 75% !important; height: 360px;">
                       <a href="/trackchairs#1">
                         <img src="../ProfAnilKulkarni.jpg" class="image-hover" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%">
                       </a>
@@ -278,7 +278,7 @@ ul.breadcrumb li a:hover {
                         <a href="/trackchairs#1">
                         <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Anil Kulkarni</h4>
                         </a>
-                        <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(kulkarni@spjimr.org)</p>
+                        <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(kulkarni@spjimr.org)</p> -->
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Adjunct Professor</h5>
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">SPJIMR</h5>
                       </div>
@@ -293,7 +293,7 @@ ul.breadcrumb li a:hover {
                         <a href="/trackchairs#8">
                         <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Radha Sharma</h4>
                         </a>
-                        <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(radha@mdi.ac.in)</p>
+                        <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(radha@mdi.ac.in)</p> -->
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor (Organizational Behavior)</h5>
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">MDI Gurgaon</h5>
                       </div>
@@ -355,7 +355,7 @@ ul.breadcrumb li a:hover {
                   <a href="/trackchairs#4">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Janki Andharia</h4>
                   </a>
-                  <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(andharia@tiss.edu)</p>
+                  <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(andharia@tiss.edu)</p> -->
                   <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Dean - Jamsetji Tata School of Disaster Studies <br> Chairperson - Centre for Disasters and Development, Jamsetji Tata School of Disaster Studies</h5>
                   <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Tata Institute of Social Sciences (TISS, Mumbai)</h5>
               
@@ -421,7 +421,7 @@ ul.breadcrumb li a:hover {
                   <a href="/trackchairs#6">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. K Kuperan Vishwanathan</h4>
                   </a>
-                  <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(kuperan@uum.edu.my)</p>
+                  <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(kuperan@uum.edu.my)</p> -->
                   <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor and Head of Financial Analysis and Policy Group</h5>
                   <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Othman Yeop Abdullah Graduate School of Business Malaysia</h5>
               
@@ -475,14 +475,14 @@ ul.breadcrumb li a:hover {
                 </h4>
                 <div class="row-5">
                   <div class="column- w-col w-col-6">
-                    <div class="card-detail" style="width: 75% !important; height: 406px;">
+                    <div class="card-detail" style="width: 75% !important; height: 365px;">
                       <a href="/trackchairs#2">
                       <img src="../DrAnshulVerma.jpg" alt="Avatar" class="image-hover" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%"></a>
                       <div class="container">
                         <a href="/trackchairs#2">
                         <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Anshul Verma</h4>
                         </a>
-                        <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(anshul.verma@spjimr.org)</p>
+                        <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(anshul.verma@spjimr.org)</p> -->
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor (Finance)</h5>
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">SPJIMR</h5>
                       </div>
@@ -496,7 +496,7 @@ ul.breadcrumb li a:hover {
                         <a href="/trackchairs#5">
                         <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Kartik Dave</h4>
                         </a>
-                        <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(kartik@aud.ac.in)</p>
+                        <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(kartik@aud.ac.in)</p> -->
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor (Marketing and Strategy)</h5>
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Ambedkar University, Delhi</h5>
                       </div>
@@ -570,7 +570,7 @@ The track themes include, but are not limited to: <br>
                   <a href="/trackchairs#10">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Satyajit Majumdar</h4>
                   </a>
-                  <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(satyajit@tiss.edu)</p>
+                  <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(satyajit@tiss.edu)</p> -->
                   <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor and Chairperson, Center for Social Entrepreneurship</h5>
                   <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Tata Institute of Social Sciences (TISS, Mumbai)</h5>
               
@@ -638,7 +638,7 @@ Social Entrepreneurs are the professionals to manage investments of financial an
                   <a href="/trackchairs#7">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Pamsy Hui</h4>
                   </a>
-                  <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(pamsy.hui@polyu.edu.hk)</p>
+                  <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(pamsy.hui@polyu.edu.hk)</p> -->
                   <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">MBA Programme Director</h5>
                   <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">The Hong Kong Polytechnic University</h5>
               
@@ -711,7 +711,7 @@ Social Entrepreneurs are the professionals to manage investments of financial an
                        <a href="">
                         <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Sapna A. Narula</h4>
                         </a>
-                        <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(divyasinghal@gim.ac.in)</p>
+                        <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(divyasinghal@gim.ac.in)</p> -->
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor & Head</h5>
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Dept. of Business and Sustainability</h5>
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">TERI School of Advanced Studies</h5>
@@ -719,9 +719,9 @@ Social Entrepreneurs are the professionals to manage investments of financial an
                     </div>
                   </div>
                   <div class="column- w-col w-col-6">
-                    <div class="card-detail" style="width: 75% !important; height: 460px;">
+                    <div class="card-detail" style="width: 75% !important; height: 420px;">
                       <a href="/">
-                      <img src="" alt="Avatar" class="image-hover" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%"></a>
+                      <img src="../ZinaidaFadeeva.png" alt="Avatar" class="image-hover" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%"></a>
                       <div class="container">
                         <a href="">
                         <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Zinaidi Fadeeva</h4></a>
