--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -78,6 +78,7 @@
       <li><a href="">Asian Way of Thinking: Integrating Local Diversities in Management Education</a></li>
       <li><a href="">Building Inclusive Markets</a></li>
       <li><a href="">Business Initiatives for Sustainable Development</a> </li>
+      <li><a href="/trackdetails#3">Design Thinking in Management</a></li>
       <li><a href="/trackdetails#4">Engaging with SDGs - The Local Experiences  </a></li>
       <li><a href="/trackdetails#5">Extreme Events, Disasters and Building Resilience</a></li>
       <li><a href="">Global Peace and Education</a></li>
