--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -373,17 +373,30 @@ ul.breadcrumb li a:hover {
                 </div>
                 <div class="column-3 w-col w-col-3"></div>
                 
-              </div>
+              
               <div class="column-7 w-col w-col-7">
               <div class="column-11 w-col w-col-11">
                  <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
         </h4>
                  <p style="text-align: justify;">
-                Content coming soon.
+                Climate change, extreme events, disasters and urbanization are inter related and societies across countries find themselves ill-prepared to deal with new and emergent risks posed by them. Their potential to cause extensive damage and impacts on people, infrastructure, and nature is huge and can wipe out development gains. <br> <br>
+
+This theme provides a platform to managers and scientists to discuss factors, causes and consequences of disasters and also explore Disaster Risk Reduction strategies in order to understand how or when these events might occur, and how to better respond to them to prevent disastrous impacts. <br> <br>
+
+Disasters and extreme weather events are known to have cascading global consequences revealing the extent of human vulnerability. The social and economic impacts- can be extensive as commerce, agriculture, fisheries, livelihoods, water and food security are affected. This raises questions about the nature and forms of development trajectory and the extent of resilience and preparedness of society to deal disasters, extreme weather events and climate change. <br> <br> The theme invites papers that offer critical analysis of:
+<li>Understanding risk relationships for sustainability</li>
+<li>Conceptual contours of vulnerability and resilience</li>
+<li>Human-Technological interface and disasters</li>
+<li>Disasters, Habitat planning and development</li>
+<li>Disaster Governance, law, transboundary issues</li>
+<li>Business continuity planning, critical infrastructure</li>
+<li>Sustaining health and well being post disasters</li>
+ <br>
+These are only illustrative ideas and the theme is open to many more diverse and interrelated topics.
               </p>
               </div>
               <div class="column-1 w-col w-col-1"></div>
-            </div>
+            </div></div>
             </div>
               <div class="column-4 w-col w-col-4"></div>
              <div class="column-4 w-col w-col-4" style="border-right:none !important; text-align: center">
