--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -28,85 +28,190 @@
 }
 
 .w-slider {height: 265px;}
+
+
+ .tags-cloud ul li {
+    float: left;
+    list-style: none;
+}
+
+.tags-cloud ul li a {
+    border: 1px solid #d7d7d7;
+    padding: 10px 13px;
+    margin: 0 6px 6px 0;
+    display: block;
+    color: #505050;
+    font-size: 16px;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+    color: #96000b;
+    font-family: 'Roboto Condensed', sans-serif;
+    transition: all 0.3s ease 0s;
+    text-decoration: none !important;
+    outline: none !important;
+}
+
+a:hover {
+  background-color: #fafafa;
+  /*color: white !important;*/
+}
+
+
     </style>
 <%end%> 
 
-
-
-
     <div style="margin-bottom: 200px;">
-
-
-
       <div class="heading-tittle color-black w-container" style="max-width: none !important;">
-
-
-
-
-
-              <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
-        <div class="w-slider-mask">
-          <div class="slide-2 w-slide"></div>
-          <div class="slide-3 w-slide">
-            <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
-              
-            </a>
+        <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
+          <div class="w-slider-mask">
+            <div class="slide-2 w-slide"></div>
+            <div class="slide-3 w-slide">
+              <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0"></a>
+            </div>
+            <!-- <div class="slide-6 w-slide"></div> -->
           </div>
-          <!-- <div class="slide-6 w-slide"></div> -->
+          <div class="w-slider-arrow-left">
+            <div class="w-icon-slider-left"></div>
+          </div>
+          <div class="w-slider-arrow-right">
+            <div class="w-icon-slider-right"></div>
+          </div>
+          <div class="w-slider-nav w-round"></div>
         </div>
-        <div class="w-slider-arrow-left">
-          <div class="w-icon-slider-left"></div>
-        </div>
-        <div class="w-slider-arrow-right">
-          <div class="w-icon-slider-right"></div>
-        </div>
-        <div class="w-slider-nav w-round"></div>
+        <div class="w-container"></div>
+        <h2 class="" style="margin-top: 30px; margin-bottom:30px;"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">List of tracks</p></h2>
+        <h5 tyle="margin-top: 30px; margin-bottom:30px;"><p style="text-decoration: ; text-decoration-color: #3b1e9a; font-family: 'Roboto Condensed', sans-serif;">The conference presentation tracks include:</h5>
       </div>
-      <div class="w-container"></div>
-       <h2 class="" style="margin-top: 30px; margin-bottom:30px;"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">List of tracks</p></h2>
+      <div class="row-2 w-row" style="margin-bottom: 200px;">
+        <div class="tags-cloud clearfix">
+        <ul>
 
-       <h5 tyle="margin-top: 30px; margin-bottom:30px;"><p style="text-decoration: ; text-decoration-color: #3b1e9a; font-family: 'Roboto Condensed', sans-serif;">The conference presentation tracks include:</h5>
+          <li style="width:50%;">
+            <a href=""><img src="../Icons/AsianWayofThinking.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline">&nbsp;Asian Way of Thinking: Integrating Local Diversities in Management Education</p>
+            </a>
+          </li>
+
+          <li style="width:50%;">
+          <a href="/trackdetails#7"><img src="../Icons/Innovation on Pedagogy and Curriculum.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+          <p style="padding-top: 20px; display: inline"> 
+          Innovating on Pedagogy and Curriculum</p></a>
+          </li>
+
+          <li style="width:50%;">
+            <a><img src="../Icons/BuildingInclusiveMarkets.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Building Inclusive Markets</p>
+            </a>
+          </li>
+
+          <li style="width:50%;">
+            <a href="/trackdetails#13"><img src="../Icons/Management Education for the Future.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+            <p style="padding-top: 20px; display: inline"> 
+            Management Education for Future</p></a>
+          </li>
+
+          <li style="width:50%;">
+            <a><img src="../Icons/Business Initiatives for Sustainable Development.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline">  Business Initiatives for Sustainable Development</p>
+            </a>
+          </li>
+
+          <li style="width:50%;">
+          <a><img src="../Icons/Rethinking CSR.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+          <p style="padding-top: 20px; display: inline"> 
+          Re-thinking CSR</p></a>
+          </li>
+
+          <li style="width:50%;">
+            <a href="/trackdetails#3"><i class="fa fa-newspaper-o"></i><p style="padding-top: 20px; display: inline">  Design Thinking in Management</p>
+            </a>
+          </li>
 
 
-</div>
-        
-        <div class="row-2 w-row" style="margin-bottom: 200px;">
-          <div class="column-6 w-col w-col-6">
-            <div class="card-new" style="height: 260px; padding: 20px;">
-            <div id="list3">
-   <ul>
-      <li><a href="">Asian Way of Thinking: Integrating Local Diversities in Management Education</a></li>
-      <li><a href="">Building Inclusive Markets</a></li>
-      <li><a href="">Business Initiatives for Sustainable Development</a> </li>
-      <li><a href="/trackdetails#3">Design Thinking in Management</a></li>
-      <li><a href="/trackdetails#4">Engaging with SDGs - The Local Experiences  </a></li>
-      <li><a href="/trackdetails#5">Extreme Events, Disasters and Building Resilience</a></li>
-      <li><a href="">Global Peace and Education</a></li>
-      <li><a href="/trackdetails#6">Inequality : The Role for Businesses</a></li>
-   </ul>
-</div>
-</div>
-            
-          </div>
-          <div class="column-6 w-col w-col-6">
-            <div class="card-new" style="margin-bottom: 100px; padding: 20px 20px 0px 20px;">
-            <div id="list3">
-              <ul>
-            <li>
-              <a href="/trackdetails#7">Innovating on Pedagogy and Curriculum</a>
-            </li>
-            <li><a href="/trackdetails#13">Management Education for Future</a></li>
-            <li><a href="">Re-thinking CSR</a></li>
-            <li><a href="/trackdetails#9">Social Entrepreneurship</a> </li>
-            <li><a href="">Social Impact Investing </a></li>
-            <li><a href="/trackdetails#11">Sustainability and Development</a></li>
-            <li><a href="/trackdetails#12">Sustainable Businesses</a></li>
-            <li><a href="">Sustainable Cities</a> </li>
-            </ul>
-          </div>
-          </div>
-          </div>
+          <li style="width:50%;">
+          <a href="/trackdetails#9"><img src="../Icons/Social Entrepreneurship.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+          <p style="padding-top: 20px; display: inline"> 
+          Social Entrepreneurship</p></a>
+          </li>
+
+
+          <li style="width:50%;">
+            <a href="/trackdetails#4"><img src="../Icons/Engaging with SDG's.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Engaging with SDGs - The Local Experiences</p>
+            </a>
+          </li>
+
+
+          <li style="width:50%;">
+             <a><img src="../Icons/Social Impact Investing.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Social Impact Investing</p></a>
+          </li>
+
+
+
+
+          <li style="width:50%;">
+          <a href="/trackdetails#5"><img src="../Icons/Extreme Events.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+          <p style="padding-top: 20px; display: inline">  
+          Extreme Events, Disasters and Building Resilience</p></a>
+          </li>
+
+
+
+
+          <li style="width:50%;">
+          <a href="/trackdetails#11"><img src="../Icons/Sustainability and Development.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Sustainability and Development</p></a>
+          </li>
+
+          <li style="width:50%;">
+          <a href="/trackdetails#5"><img src="../Icons/Global Peace and Education.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+          <p style="padding-top: 20px; display: inline">  
+          Global Peace and Education</p></a>
+          </li>
+
+
+          <li style="width:50%;">
+          <a href="/trackdetails#12"><img src="../Icons/Sustainable Businesses.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Sustainable Businesses</p></a>
+          </li>
+
+
+          <li style="width:50%;">
+          <a style="font-size:15px;" href="/trackdetails#6"><img src="../Icons/Inequality - Role of Businesses.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+          <p style="padding-top: 20px; display: inline">  
+          Inequality : The Role for Businesses</p></a>
+          </li>
+
+          
+
+         
+
+          
+
+          
+
+          
+
+
+          
+
+          <li style="width:50%;">
+          <a href=""><img src="../Icons/Sustainable Cities.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Sustainable Cities</p></a>
+          </li>
+
+        </ul>
         </div>
+        </div>
+
+
       </div>
     
 
