--- a/app/views/abstract_mailer/welcome_email.html.erb
+++ b/app/views/abstract_mailer/welcome_email.html.erb
@@ -1,1 +1,2 @@
-<h1> New Abstract Uploaded </h1>
+<h4> New Abstract has been Uploaded by : <%= @user.first_name %> <%= @user.last_name %> <br></h4>
+<h5>with the Email ID: <%= @user.email %> </h5>
