--- a/app/views/abstract_mailer/welcome_email.text.erb
+++ b/app/views/abstract_mailer/welcome_email.text.erb
@@ -1,1 +1,2 @@
-Sample mail sent using smtp.
+ New Abstract has been Uploaded by : <%= @user.first_name %> <%= @user.last_name %> 
+ with the Email ID: <%= @user.email %> 
