--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -173,7 +173,7 @@ a:hover {
           </li>
 
           <li style="width:50%;">
-          <a href="/trackdetails#5"><img src="../Icons/Global Peace and Education.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+          <a href="#"><img src="../Icons/Global Peace and Education.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
           <p style="padding-top: 20px; display: inline">  
           Global Peace and Education</p></a>
           </li>
