--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -105,7 +105,7 @@ ul.breadcrumb li a:hover {
 
 
 
-<div id="3" style="height: 800px; margin-bottom: 50px; margin-top: 00px;">
+<div id="3" style="height: 800px; margin-bottom: 50px; margin-top: 50px;">
   <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
     <li><a href="/tracks">List of track</a></li>
@@ -175,7 +175,7 @@ ul.breadcrumb li a:hover {
 
 
 
-<div id="4" style="height: 800px; margin-bottom: 50px;">
+<div id="4" style="height: 800px; margin-bottom: 50px; margin-top: 90px;">
   <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
     <li><a href="/tracks">List of track</a></li>
@@ -335,7 +335,7 @@ ul.breadcrumb li a:hover {
 
 
 
-      <div id="5" style="height: 800px; margin-top: 00px;">
+      <div id="5" style="height: 800px; margin-top: 100px;">
         <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
     <li><a href="/tracks">List of track</a></li>
@@ -414,7 +414,7 @@ These are only illustrative ideas and the theme is open to many more diverse and
       </div>
 
 
-      <div id="6" style="height: 800px; margin-top: 00px;">
+      <div id="6" style="height: 800px; margin-top: 90px;">
         <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
     <li><a href="/tracks">List of track</a></li>
@@ -480,7 +480,7 @@ These are only illustrative ideas and the theme is open to many more diverse and
       </div>
 </div>
 
-<div id="13" style="height: 800px; margin-bottom: 50px;">
+<div id="13" style="height: 800px; margin-bottom: 180px;">
   <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
     <li><a href="/tracks">List of track</a></li>
@@ -564,7 +564,7 @@ The track themes include, but are not limited to: <br>
       </div>
 
 
-      <div id="9" style="height: 800px; margin-top: 100px;">
+      <div id="9" style="height: 800px; margin-top: 140px;">
         <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
     <li><a href="/tracks">List of track</a></li>
@@ -633,7 +633,7 @@ Social Entrepreneurs are the professionals to manage investments of financial an
 </div>
 
 
-      <div id="11" style="height: 800px; margin-top: 00px;">
+      <div id="11" style="height: 800px; margin-top: 00px;margin-top: 100px;">
         <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
     <li><a href="/tracks">List of track</a></li>
@@ -708,13 +708,14 @@ Social Entrepreneurs are the professionals to manage investments of financial an
         </div>
       </div>
 </div>
-
-<div id="12" style="height: 800px; margin-bottom: 50px;">
+<div class="row-5 w-row">
+<div id="12" style="height: 800px; margin-bottom: 50px; margin-top: 20px;">
   <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
     <li><a href="/tracks">List of track</a></li>
     <li>SUSTAINABLE BUSINESSES</li>
   </ul>
+
         <div class="column-12 w-col w-col-12">
         <div class="card-new">
           <div class="row-5 w-row">
@@ -752,6 +753,21 @@ Social Entrepreneurs are the professionals to manage investments of financial an
                       </div>
                     </div>
                   </div>
+                  <div class="column- w-col w-col-3"></div>
+                  <div class="column- w-col w-col-6">
+                    <div class="card-detail" style="width: 75% !important; margin-top: 20px;">
+                      <a href="/trackchairs#1">
+                      <img src="../DrAmbikaZutshi.jpg" alt="Avatar" class="image-hover" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%"></a>
+                      <div class="container">
+                        <a href="">
+                        <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Ambika Zutshi</h4></a>
+                       
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor & HDR Director, Department of Management</h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Deakin University, Melbourne</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="column- w-col w-col-3"></div>
                 </div>
               </div>
               <div class="w-col w-col-6">
@@ -773,6 +789,7 @@ Social Entrepreneurs are the professionals to manage investments of financial an
             </div>
           </div>
         </div>
+      </div>
       </div>
 
 
